--- a/UI/Searching.UI.WinPhoneClient/Searching.UI.WinPhoneClient.csproj
+++ b/UI/Searching.UI.WinPhoneClient/Searching.UI.WinPhoneClient.csproj
@@ -106,6 +106,7 @@
     <Compile Include="MainPage.xaml.cs">
       <DependentUpon>MainPage.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Models\Account.cs" />
     <Compile Include="Models\Announcing.cs" />
     <Compile Include="Models\AreasOfCity.cs" />
     <Compile Include="Models\Categories.cs" />
