Сделал библиотеку классов. Разобрался с сериализацией данных на сервисе.

--- a/BE/Searching.BE.Service/Searching.BE.Service.csproj
+++ b/BE/Searching.BE.Service/Searching.BE.Service.csproj
@@ -71,7 +71,6 @@
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Category.cs" />
     <Compile Include="IWCFRESTService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Settings.Designer.cs">
@@ -107,6 +106,10 @@
     <ProjectReference Include="..\..\DAL\Searching.DAL.Main\Searching.DAL.Main.csproj">
       <Project>{ac643158-52cb-4e7e-9f5c-21716ae905c3}</Project>
       <Name>Searching.DAL.Main</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\Shared\Searching.Shared.ModelClasses\Searching.Shared.ModelClasses.csproj">
+      <Project>{80f00a62-772a-4c74-bb9b-ac4f38db1469}</Project>
+      <Name>Searching.Shared.ModelClasses</Name>
     </ProjectReference>
   </ItemGroup>
   <PropertyGroup>
