--- a/UI/Searching.UI.WinPhoneClient/Searching.UI.WinPhoneClient.csproj
+++ b/UI/Searching.UI.WinPhoneClient/Searching.UI.WinPhoneClient.csproj
@@ -106,16 +106,6 @@
     <Compile Include="MainPage.xaml.cs">
       <DependentUpon>MainPage.xaml</DependentUpon>
     </Compile>
-    <Compile Include="Models\Account.cs" />
-    <Compile Include="Models\Announcing.cs" />
-    <Compile Include="Models\AreasOfCity.cs" />
-    <Compile Include="Models\Categories.cs" />
-    <Compile Include="Models\Cities.cs" />
-    <Compile Include="Models\Country.cs" />
-    <Compile Include="Models\Favorite_Announcing.cs" />
-    <Compile Include="Models\Selected_Announcing.cs" />
-    <Compile Include="Models\Selected_User.cs" />
-    <Compile Include="Models\UserList.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Resources\AppResources.Designer.cs">
       <AutoGen>True</AutoGen>
@@ -248,6 +238,12 @@
       <Generator>PublicResXFileCodeGenerator</Generator>
       <LastGenOutput>AppResources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\..\Shared\Searching.Shared.ModelClasses\Searching.Shared.ModelClasses.csproj">
+      <Project>{80f00a62-772a-4c74-bb9b-ac4f38db1469}</Project>
+      <Name>Searching.Shared.ModelClasses</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Microsoft\$(TargetFrameworkIdentifier)\$(TargetFrameworkVersion)\Microsoft.$(TargetFrameworkIdentifier).$(TargetFrameworkVersion).Overrides.targets" />
   <Import Project="$(MSBuildExtensionsPath)\Microsoft\$(TargetFrameworkIdentifier)\$(TargetFrameworkVersion)\Microsoft.$(TargetFrameworkIdentifier).CSharp.targets" />
