--- a/UI/Searching.UI.WinPhoneClient/packages.config
+++ b/UI/Searching.UI.WinPhoneClient/packages.config
@@ -4,4 +4,6 @@
   <package id="Microsoft.Bcl.Build" version="1.0.14" targetFramework="wp81" />
   <package id="Microsoft.Net.Http" version="2.2.29" targetFramework="wp81" />
   <package id="Newtonsoft.Json" version="7.0.1" targetFramework="wp81" />
+  <package id="Searching.Shared.ModelClasses" targetFramework="wp81"/>
+  
 </packages>
