Работаю над форматом Json

--- a/BE/Searching.BE.Service/Web.config
+++ b/BE/Searching.BE.Service/Web.config
@@ -25,13 +25,13 @@
     <behaviors>
       <endpointBehaviors>
         <behavior name="restBehavior">
-          <webHttp helpEnabled="true" />
+          <webHttp helpEnabled="true" defaultBodyStyle="Wrapped" defaultOutgoingResponseFormat="Json" automaticFormatSelectionEnabled="true"/>
         </behavior>
       </endpointBehaviors>
       <serviceBehaviors>
         <behavior name="MyBehavior">
           <!-- To avoid disclosing metadata information, set the values below to false before deployment -->
-          <serviceMetadata httpGetEnabled="true" httpsGetEnabled="true" />
+          <serviceMetadata httpsGetEnabled="true" httpGetEnabled="true" />
           <!-- To receive exception details in faults for debugging purposes, set the value below to true.  Set to false before deployment to avoid disclosing exception information -->
           <serviceDebug includeExceptionDetailInFaults="false" />
         </behavior>
@@ -44,15 +44,25 @@
     <services>
         <service behaviorConfiguration="MyBehavior" name="Searching.BE.Service.WCFRESTService">
             <endpoint address="" behaviorConfiguration="restBehavior" binding="webHttpBinding"
-                contract="Searching.BE.Service.IWCFRESTService" />
-            <endpoint address="net" binding="netHttpBinding" contract="Searching.BE.Service.IWCFRESTService">
-                <identity>
-                    <dns value="localhost" />
-                </identity>
-            </endpoint>
+                contract="Searching.BE.Service.IWCFRESTService" bindingConfiguration="webhttp" />
             <endpoint address="mex" binding="mexHttpBinding" contract="IMetadataExchange" />
+          <endpoint address="net" binding="netHttpBinding" contract="Searching.BE.Service.IWCFRESTService">
+            <identity>
+              <dns value="localhost"/>
+            </identity>
+          </endpoint>
         </service>
     </services>
+      <bindings>
+        <webHttpBinding>
+          <binding name="webhttp">
+            <security mode="None">
+              <transport clientCredentialType="None">
+              </transport>
+            </security>
+          </binding>
+        </webHttpBinding>
+      </bindings>
   </system.serviceModel>
   <system.webServer>
     <modules runAllManagedModulesForAllRequests="true" />
