--- a/BE/Searching.BE.Service/Web.config
+++ b/BE/Searching.BE.Service/Web.config
@@ -25,15 +25,15 @@
     <behaviors>
       <endpointBehaviors>
         <behavior name="restBehavior">
-          <webHttp helpEnabled="true" defaultBodyStyle="Wrapped" defaultOutgoingResponseFormat="Json" automaticFormatSelectionEnabled="true"/>
+          <webHttp/>
         </behavior>
       </endpointBehaviors>
       <serviceBehaviors>
         <behavior name="MyBehavior">
           <!-- To avoid disclosing metadata information, set the values below to false before deployment -->
-          <serviceMetadata httpsGetEnabled="true" httpGetEnabled="true" />
+          <serviceMetadata httpGetEnabled="true"/>
           <!-- To receive exception details in faults for debugging purposes, set the value below to true.  Set to false before deployment to avoid disclosing exception information -->
-          <serviceDebug includeExceptionDetailInFaults="false" />
+          <serviceDebug includeExceptionDetailInFaults="false"/>
         </behavior>
       </serviceBehaviors>
     </behaviors>
@@ -44,7 +44,7 @@
     <services>
         <service behaviorConfiguration="MyBehavior" name="Searching.BE.Service.WCFRESTService">
             <endpoint address="" behaviorConfiguration="restBehavior" binding="webHttpBinding"
-                contract="Searching.BE.Service.IWCFRESTService" bindingConfiguration="webhttp" />
+                contract="Searching.BE.Service.IWCFRESTService"/>
             <endpoint address="mex" binding="mexHttpBinding" contract="IMetadataExchange" />
           <endpoint address="net" binding="netHttpBinding" contract="Searching.BE.Service.IWCFRESTService">
             <identity>
