Переставил все на сервер

--- a/BE/Searching.BE.Service/Web.config
+++ b/BE/Searching.BE.Service/Web.config
@@ -10,8 +10,8 @@
   </appSettings>
 
   <system.web>
-    <compilation debug="true" targetFramework="4.6"/>
-    <httpRuntime targetFramework="4.6"/>
+    <compilation debug="true" targetFramework="4.5"/>
+    <httpRuntime targetFramework="4.5"/>
     <webServices>
           <protocols>
                   <add name="HttpGet"/>
@@ -25,7 +25,7 @@
     <behaviors>
       <endpointBehaviors>
         <behavior name="restBehavior">
-          <webHttp/>
+          <webHttp helpEnabled="true"/>
         </behavior>
       </endpointBehaviors>
       <serviceBehaviors>
