--- a/BE/Searching.BE.Service/Web.config
+++ b/BE/Searching.BE.Service/Web.config
@@ -10,12 +10,12 @@
   </appSettings>
 
   <system.web>
-    <compilation debug="true" targetFramework="4.5"/>
-    <httpRuntime targetFramework="4.5"/>
+    <compilation debug="true" targetFramework="4.5" />
+    <httpRuntime targetFramework="4.5" />
     <webServices>
           <protocols>
-                  <add name="HttpGet"/>
-                  <add name="HttpPost"/>
+                  <add name="HttpGet" />
+                  <add name="HttpPost" />
           </protocols>
     </webServices>
 
@@ -25,15 +25,15 @@
     <behaviors>
       <endpointBehaviors>
         <behavior name="restBehavior">
-          <webHttp helpEnabled="true"/>
+          <webHttp helpEnabled="true" />
         </behavior>
       </endpointBehaviors>
       <serviceBehaviors>
         <behavior name="MyBehavior">
           <!-- To avoid disclosing metadata information, set the values below to false before deployment -->
-          <serviceMetadata httpGetEnabled="true"/>
+          <serviceMetadata httpGetEnabled="true" />
           <!-- To receive exception details in faults for debugging purposes, set the value below to true.  Set to false before deployment to avoid disclosing exception information -->
-          <serviceDebug includeExceptionDetailInFaults="false"/>
+          <serviceDebug includeExceptionDetailInFaults="true" />
         </behavior>
       </serviceBehaviors>
     </behaviors>
@@ -51,9 +51,14 @@
               <dns value="localhost"/>
             </identity>
           </endpoint>
+          <host>
+            <baseAddresses>
+              <add baseAddress="https://localhost:1703/Searching.BE.Service/WCFRESTService.svc/" />
+            </baseAddresses>
+          </host>
         </service>
     </services>
-      <bindings>
+      <bindings>       
         <webHttpBinding>
           <binding name="webhttp">
             <security mode="None">
@@ -63,6 +68,7 @@
           </binding>
         </webHttpBinding>
       </bindings>
+    
   </system.serviceModel>
   <system.webServer>
     <modules runAllManagedModulesForAllRequests="true" />
@@ -70,7 +76,7 @@
         To browse web app root directory during debugging, set the value below to true.
         Set to false before deployment to avoid disclosing web app folder information.
       -->
-    <directoryBrowse enabled="true" />
+    <directoryBrowse enabled="true" showFlags="Date, Time, Size, Extension, LongDate" />
   </system.webServer>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
@@ -87,10 +93,10 @@
   <system.codedom>
              <compilers>
                     <compiler language="c#;cs;csharp" extension=".cs" type="Microsoft.CSharp.CSharpCodeProvider, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" warningLevel="4" compilerOptions="/langversion:6 /nowarn:1659;1699;1701">
-                           <providerOption name="CompilerVersion" value="v4.0"/>
+                           <providerOption name="CompilerVersion" value="v4.0" />
                     </compiler>
                     <compiler language="vb;vbs;visualbasic;vbscript" extension=".vb" type="Microsoft.VisualBasic.VBCodeProvider, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" warningLevel="4" compilerOptions="/langversion:14 /nowarn:41008 /define:_MYTYPE=\&quot;Web\&quot; /optionInfer+">
-                           <providerOption name="CompilerVersion" value="v4.0"/>
+                           <providerOption name="CompilerVersion" value="v4.0" />
                     </compiler>
              </compilers>
        </system.codedom>
