--- a/Shared/Searching.Shared.ModelClasses/Searching.Shared.ModelClasses.csproj
+++ b/Shared/Searching.Shared.ModelClasses/Searching.Shared.ModelClasses.csproj
@@ -84,6 +84,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Model\Announcing.cs" />
+    <Compile Include="Model\AnnFilter.cs" />
     <Compile Include="Model\AreasOfCity.cs" />
     <Compile Include="Model\Categories.cs" />
     <Compile Include="Model\Cities.cs" />
