--- a/BE/Searching.BE.Service/Web.config
+++ b/BE/Searching.BE.Service/Web.config
@@ -60,7 +60,19 @@
     </services>
       <bindings>       
         <webHttpBinding>
-          <binding name="webhttp">
+          <binding name="webhttp"
+            bypassProxyOnLocal="true"
+            useDefaultWebProxy="false"
+            hostNameComparisonMode="WeakWildcard"
+            sendTimeout="10:15:00"
+            openTimeout="10:15:00"
+            receiveTimeout="10:15:00"
+            maxReceivedMessageSize="2147483647"
+            maxBufferSize="2147483647"
+            maxBufferPoolSize="2147483647"
+            transferMode="StreamedRequest">
+            <readerQuotas maxArrayLength="2147483647"
+                          maxStringContentLength="2147483647" />
             <security mode="None">
               <transport clientCredentialType="None">
               </transport>
