--- a/DAL/Searching.DAL.Main/Searching.DAL.Main.csproj
+++ b/DAL/Searching.DAL.Main/Searching.DAL.Main.csproj
@@ -40,6 +40,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DBValueCheking.cs" />
     <Compile Include="Logger.cs" />
     <Compile Include="Logics.BD\AnnouncingFilter.cs" />
     <Compile Include="Logics.BD\AnnouncingFunction.cs" />
