--- a/BE/Searching.BE.Service/Web.config
+++ b/BE/Searching.BE.Service/Web.config
@@ -11,7 +11,7 @@
 
   <system.web>
     <compilation debug="true" targetFramework="4.5" />
-    <httpRuntime targetFramework="4.5" />
+    <httpRuntime targetFramework="4.5" enable="true" maxQueryStringLength="32768" maxUrlLength="65536"/>
     <webServices>
           <protocols>
                   <add name="HttpGet" />
@@ -25,7 +25,7 @@
     <behaviors>
       <endpointBehaviors>
         <behavior name="restBehavior">
-          <webHttp helpEnabled="true" />
+          <webHttp helpEnabled="true" defaultOutgoingResponseFormat="Json" />
         </behavior>
       </endpointBehaviors>
       <serviceBehaviors>
@@ -43,12 +43,11 @@
     <serviceHostingEnvironment aspNetCompatibilityEnabled="true" multipleSiteBindingsEnabled="true" />
     <services>
         <service behaviorConfiguration="MyBehavior" name="Searching.BE.Service.WCFRESTService">
-            <endpoint address="" behaviorConfiguration="restBehavior" binding="webHttpBinding"
-                contract="Searching.BE.Service.IWCFRESTService"/>
+            <endpoint address="" behaviorConfiguration="restBehavior" binding="webHttpBinding" contract="Searching.BE.Service.IWCFRESTService" />
             <endpoint address="mex" binding="mexHttpBinding" contract="IMetadataExchange" />
           <endpoint address="net" binding="netHttpBinding" contract="Searching.BE.Service.IWCFRESTService">
             <identity>
-              <dns value="localhost"/>
+              <dns value="localhost" />
             </identity>
           </endpoint>
           <host>
@@ -60,19 +59,8 @@
     </services>
       <bindings>       
         <webHttpBinding>
-          <binding name="webhttp"
-            bypassProxyOnLocal="true"
-            useDefaultWebProxy="false"
-            hostNameComparisonMode="WeakWildcard"
-            sendTimeout="10:15:00"
-            openTimeout="10:15:00"
-            receiveTimeout="10:15:00"
-            maxReceivedMessageSize="2147483647"
-            maxBufferSize="2147483647"
-            maxBufferPoolSize="2147483647"
-            transferMode="StreamedRequest">
-            <readerQuotas maxArrayLength="2147483647"
-                          maxStringContentLength="2147483647" />
+          <binding name="webhttp" bypassProxyOnLocal="true" useDefaultWebProxy="false" hostNameComparisonMode="WeakWildcard" sendTimeout="10:15:00" openTimeout="10:15:00" receiveTimeout="10:15:00" maxReceivedMessageSize="2147483647" maxBufferSize="2147483647" maxBufferPoolSize="2147483647" transferMode="StreamedRequest">
+            <readerQuotas maxArrayLength="2147483647" maxStringContentLength="2147483647" />
             <security mode="None">
               <transport clientCredentialType="None">
               </transport>
@@ -89,6 +77,17 @@
         Set to false before deployment to avoid disclosing web app folder information.
       -->
     <directoryBrowse enabled="true" showFlags="Date, Time, Size, Extension, LongDate" />
+        <security>
+            <requestFiltering allowDoubleEscaping="true">
+              <requestLimits maxQueryString="32768"/>
+                <fileExtensions>
+                  <remove fileExtension=".json"/>
+                  <add fileExtension=".json" allowed="true"/>
+                    <remove fileExtension=".cs" />
+                    <add fileExtension=".cs" allowed="true" />
+                </fileExtensions>
+            </requestFiltering>
+        </security>
   </system.webServer>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
