Back up before Micro

--- a/BE/Searching.BE.Service/Web.config
+++ b/BE/Searching.BE.Service/Web.config
@@ -52,7 +52,7 @@
           </endpoint>
           <host>
             <baseAddresses>
-              <add baseAddress="https://localhost:1703/Searching.BE.Service/WCFRESTService.svc/" />
+              <add baseAddress="http://localhost:1703/Searching.BE.Service/WCFRESTService.svc/" />
             </baseAddresses>
           </host>
         </service>
