--- a/UI/Searching.UI.WinClient/packages.config
+++ b/UI/Searching.UI.WinClient/packages.config
@@ -1,7 +1,17 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Caliburn.Micro" version="2.0.2" targetFramework="wp8" />
+  <package id="Caliburn.Micro.BindableAppBar" version="2.0.0.0" targetFramework="wp8" />
+  <package id="Caliburn.Micro.Core" version="2.0.2" targetFramework="wp8" />
+  <package id="Castle.Core" version="2.5.2" targetFramework="wp8" />
+  <package id="Castle.Windsor" version="2.5.2" targetFramework="wp8" />
+  <package id="CommonServiceLocator" version="1.3" targetFramework="wp8" />
   <package id="Microsoft.Bcl" version="1.1.10" targetFramework="wp8" />
   <package id="Microsoft.Bcl.Build" version="1.0.14" targetFramework="wp8" />
   <package id="Microsoft.Net.Http" version="2.2.29" targetFramework="wp8" />
+  <package id="Mutzl.Mvvm.DependentRelayCommand" version="0.9.5.0" targetFramework="wp8" />
+  <package id="MvvmLight" version="5.2.0.0" targetFramework="wp8" />
+  <package id="MvvmLightLibs" version="5.2.0.0" targetFramework="wp8" />
   <package id="Newtonsoft.Json" version="7.0.1" targetFramework="wp8" />
+  <package id="Portable.MvvmLightLibs" version="4.4.32.1" targetFramework="wp8" />
 </packages>
