--- a/Shared/Searching.Shared.ModelClasses/Searching.Shared.ModelClasses.csproj
+++ b/Shared/Searching.Shared.ModelClasses/Searching.Shared.ModelClasses.csproj
@@ -90,6 +90,7 @@
     <Compile Include="Model\Cities.cs" />
     <Compile Include="Model\Country.cs" />
     <Compile Include="Model\Favorite_Announcing.cs" />
+    <Compile Include="Model\ReturnValue.cs" />
     <Compile Include="Model\Selected_Announcing.cs" />
     <Compile Include="Model\Selected_User.cs" />
     <Compile Include="Model\UserList.cs" />
