Add wf, Notification working

--- a/Shared/Searching.Shared.ModelClasses/Searching.Shared.ModelClasses.csproj
+++ b/Shared/Searching.Shared.ModelClasses/Searching.Shared.ModelClasses.csproj
@@ -80,9 +80,6 @@
     <Prefer32Bit>true</Prefer32Bit>
   </PropertyGroup>
   <ItemGroup>
-    <!-- A reference to the entire .Net Framework and Windows SDK are automatically included -->
-  </ItemGroup>
-  <ItemGroup>
     <Compile Include="Model\Announcing.cs" />
     <Compile Include="Model\AnnFilter.cs" />
     <Compile Include="Model\AreasOfCity.cs" />
@@ -98,6 +95,11 @@
     <Compile Include="Model\TestClass.cs" />
     <Compile Include="Model\UserList.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <Reference Include="System.Collections.Concurrent">
+      <HintPath>..\..\..\..\..\..\..\Users\Denis\AppData\Local\assembly\dl3\NGAL26XL.8KP\C4RAY29B.WZA\2262b95a\00ab2b23_157acf01\System.Collections.Concurrent.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <PropertyGroup Condition=" '$(VisualStudioVersion)' == '' or '$(VisualStudioVersion)' &lt; '12.0' ">
     <VisualStudioVersion>12.0</VisualStudioVersion>
